# league_management_system

./: .env  .gitignore  manage.py  pyproject.toml
apps/core/: admin.py  apps.py
apps/core/models/: __init__.py  base.py  user.py
apps/core/views/: views.py
apps/leagues/: __init__.py  admin.py  apps.py
apps/leagues/algorithms/: __init__.py  clean_sheet.py  discplinary.py  standings.py  top_scorers.py
apps/leagues/models/: __init__.py  league.py  player.py  season.py  team.py
apps/matches/: apps.py
apps/matches/models/: __init__.py  event.py  match.py
config/: __init__.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  testing.py
requirements/: base.txt
scripts/setup/: init_project.py
