# PROJECT METADATA & BUILD CONFIGURATION (pyproject.toml)
# This file is used by modern Python tools (like pip) for project building,
# packaging, and tool configuration, following PEP 518/621 standards.

[build-system]
requires = ["setuptool>=61.0", "wheel"]
buidl-backend = "setuptool.build_meta"

[project]
name = "league_management_system"
version = "0.1.0"
description = "Comprehensive league management system with automatetd tracking"
authors = [{name = "Faraj Omar", email = "omarfaraj355@gmail.com"}]
dependencies = [
    "Django>=4.2.7",
    "djangorestframework>=3.14.0",
    "psycopg2-binary>=2.9.7",
    "Pillow>=10.0.1",
    "python-decouple>=3.8",
    "celery>=5.3.4",
    "redis>=5.0.1"
]

[project.optional-dependancies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "ultralytic>=8.0.189"
]

[tool.black]
line-length = 88
target-version = ['py311']